# nextelecamera

./: CMakeLists.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/nextelecamera/: FormatConfig.kt  GLPreviewRenderer.kt  UVCPipeline.kt
app/src/main/res/xml/: usb_device_filter.xml
gradle/: libs.versions.toml
libuvc-module/: build.gradle.kts
libuvc-module/src/main/cpp/: CMakeLists.txt  frame_queue.cpp  frame_queue.h  mjpeg_decoder.cpp  mjpeg_decoder.h  uvc_pipeline.cpp  yuyv_converter.cpp  yuyv_converter.h
libuvc-module/src/main/java/com/nextelecamera/native/: UVCBridge.kt
libuvc-module/src/main/jniLibs/: README.md
